# qoqolodownloader

./: README.md  pyproject.toml
qoqolodownloader/: config.properties  downloader.py  pyinstaller.py
